--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/tododatabase
+spring.datasource.username=root
+spring.datasource.password=Admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
