--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=Admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+#FOR TESTING:
+#spring.jpa.hibernate.ddl-auto=create-drop
+#WHEN NOT TESTING:
+spring.jpa.hibernate.ddl-auto=update
