--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/tododatabase
-spring.datasource.username=root
-spring.datasource.password=Admin
+spring.datasource.url=jdbc:mysql://bc87509673b662:ac1b3e2c@us-cdbr-east-06.cleardb.net/heroku_574f5abc7605bd5?reconnect=true
+spring.datasource.username=bc87509673b662
+spring.datasource.password=ac1b3e2c
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #FOR TESTING:
