--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #spring.jpa.hibernate.ddl-auto=create-drop
 #WHEN NOT TESTING:
 spring.jpa.hibernate.ddl-auto=update
+java.runtime.version=17.0.3
